--- a/src/components/LifeStages.astro
+++ b/src/components/LifeStages.astro
@@ -7,8 +7,8 @@ import cdmxImage from '../../public/cdmx.webp';
 <section class="h-[65vh] bg-gradient-to-br from-rp-blue to-rp-light-blue relative overflow-hidden">
     <!-- Desktop Layout -->
     <div class="hidden md:block container mx-auto px-4 h-full flex flex-col justify-center">
-        <div class="mt-20">
-            <h2 class="text-4xl font-bold text-white">Tenemos el plan ideal para cada etapa de tu vida</h2>
+        <div class="mt-10">
+            <h2 class="text-4xl font-bold text-white">Tenemos el plan ideal para<br> cada etapa de tu vida</h2>
         </div>
         
         <div class="grid md:grid-cols-2 gap-12 items-center h-full relative">
