--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -290,7 +290,7 @@ import Contact from '../../components/Contact.astro';
         <div class="row justify-content-between align-items-center hero-logos">
             <a class="col-auto" href="/">
               <div>
-                <img src="/segubecalanding/Logo_New_York_Life.webp" alt="New York Life" class="img-fluid" style="width:clamp(100px,28vw,280px);height:auto;max-height:none;" />
+                <img src="/segubecalanding/rp_blanco.png" alt="New York Life" class="img-fluid" style="width:clamp(100px,28vw,280px);height:auto;max-height:none;" />
               </div>
             </a>
 
