--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,14 +47,14 @@ const paginasPrincipales = [
       <!-- Logos -->
       <a href="/" class="flex items-center flex-shrink-0">
         <div class="flex items-center space-x-2 sm:space-x-3">
-          <img src="/Logo_New_York_Life.svg" alt="New York Life" class="h-6 sm:h-8 w-auto object-contain" />
+          <img src="/Logo_New_York_Life.svg" alt="New York Life" class="h-12 sm:h-8 w-auto object-contain" />
           <Image 
             src={logoImage} 
             alt="Seguros RP" 
             format="png"
             loading="eager"
             quality={95}
-            class="w-24 sm:w-32 h-auto"
+            class="w-auto sm:w-32 h-10"
           />
         </div>
       </a>
