--- a/src/components/index.astro
+++ b/src/components/index.astro
@@ -20,7 +20,7 @@ const pageDescription = "Especialistas en seguros de vida, gastos médicos mayor
 <Layout title={pageTitle} description={pageDescription}>
   <Header />
   <Hero />
-  <Plans />
+  {/*<Plans /> */}
   <LifeStages />
   <Statistics />
   {/*<About />
