--- a/src/components/index.astro
+++ b/src/components/index.astro
@@ -14,7 +14,7 @@ import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Seguros RP - Tu Tranquilidad es Nuestro Compromiso";
-const pageDescription = "Especialistas en seguros de vida, gastos médicos mayores, autos y más. Con más de 25 años de experiencia, protegemos lo que más valoras.";
+const pageDescription = "Especialistas en seguros de vida, gastos médicos mayores y más. Con más de 25 años de experiencia, protegemos lo que más valoras.";
 ---
 
 <Layout title={pageTitle} description={pageDescription}>
