--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -26,6 +26,7 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
   <!-- Preload critical images for better LCP -->
   <link rel="preload" href="/nyl-white.png" as="image" />
   <link rel="preload" href="/rp_blancos_flip.png" as="image" />
+  <link rel="preload" href="/segubecalanding/hero.png" as="image" />
   
   <link rel="stylesheet" href="/css/fonts.css" />
 </head>
@@ -64,7 +65,7 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
                     </div>
                 </div>
                 <div class="flex relative mt-96 md:mt-96 lg:mt-96 md:h-60">
-                    <img src="/segubecalanding/hero.png" alt="Padres asegurando el futuro de sus hijos con Segubeca" class="absolute bottom-0 right-0 w-full max-w-2xl  object-contain z-10" loading="lazy" />
+                    <img src="/segubecalanding/hero.png" alt="Padres asegurando el futuro de sus hijos con Segubeca" fetchpriority=high class="absolute bottom-0 right-0 w-full max-w-2xl  object-contain z-10" loading="lazy" />
                 </div>
             </div>
         </div>
@@ -281,10 +282,10 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
         <div class="relative">
           <!-- Indicadores -->
           <div class="flex justify-center space-x-2 mb-8">
-            <button class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 transition-all duration-300 carousel-indicator opacity-100" data-slide="0"></button>
-            <button class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="1"></button>
-            <button class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="2"></button>
-            <button class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="3"></button>
+            <button name="testimonial-1" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 transition-all duration-300 carousel-indicator opacity-100" data-slide="0"></button>
+            <button name="testimonial-2" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="1"></button>
+            <button name="testimonial-3" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="2"></button>
+            <button name="testimonial-4" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="3"></button>
           </div>
 
           <!-- Slides container -->
