--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -282,10 +282,10 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
         <div class="relative">
           <!-- Indicadores -->
           <div class="flex justify-center space-x-2 mb-8">
-            <button name="testimonial-1" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 transition-all duration-300 carousel-indicator opacity-100" data-slide="0"></button>
-            <button name="testimonial-2" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="1"></button>
-            <button name="testimonial-3" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="2"></button>
-            <button name="testimonial-4" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="3"></button>
+            <button name="Boton para ver el testimonio numero 1" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 transition-all duration-300 carousel-indicator opacity-100" data-slide="0"></button>
+            <button name="Boton para ver el testimonio numero 2" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="1"></button>
+            <button name="Boton para ver el testimonio numero 3" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="2"></button>
+            <button name="Boton para ver el testimonio numero 4" class="w-3 h-3 sm:w-4 sm:h-4 rounded-full bg-yellow-300 opacity-50 transition-all duration-300 carousel-indicator" data-slide="3"></button>
           </div>
 
           <!-- Slides container -->
