--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -65,7 +65,7 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
                     </div>
                 </div>
                 <div class="flex relative mt-96 md:mt-96 lg:mt-96 md:h-60">
-                    <img src="/segubecalanding/hero.png" alt="Padres asegurando el futuro de sus hijos con Segubeca" fetchpriority=high class="absolute bottom-0 right-0 w-full max-w-2xl  object-contain z-10" loading="lazy" />
+                    <img src="/segubecalanding/hero.png" alt="Padres asegurando el futuro de sus hijos con Segubeca" fetchpriority="high" class="absolute bottom-0 right-0 w-full max-w-2xl object-contain z-10" loading="eager" />
                 </div>
             </div>
         </div>
